# land-cover-classification

./: .gitignore  README.md  main.py  pyproject.toml
configs/feature_extraction_configurations/: multiple_pixel_feature_extraction.json  pixel_feature_extraction.json
configs/make_mask_configuration/: make_mask.json
configs/sentinel_configurations/: sentinel_channels.json
configs/smoketest_configuration/: smoketest.json
configs/test_configuration/: test_model.json
configs/train_configuration/: random_forrest_model.json  support_vector_machine_model.json  xg_boost_model.json
data/: README.md
src/exceptions/: exceptions.py
src/models/classification_models/: ClassficationModelFactory.py  ClassificationModel.py  RandomForrestModel.py  SupportVectorMachineModel.py  XGBoostModel.py
src/modules/: feature_extraction_module.py  make_mask_module.py  trainer_module.py
src/services/: feature_extraction_service.py  make_mask_service.py  model_train_service.py  smoketest.py
src/utils/: propmt_util.py  raster_image_util.py  sentinel_image_paths_util.py  vegetation_index_util.py
